mongodb client and mongoose examples with express router

--- a/sign.html
+++ b/sign.html
@@ -1,5 +1,5 @@
 <h1>Register</h1>
-<form action="/register" method="post">
+<form action="/user/add" method="post">
 	Username: <input type="text" name="username"><br/>
 	Email: <input type="email" name="email"><br/>
 	Password: <input type="password" name="password"><br/>
